--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
 		"typescript": "^4.9.5"
 	},
 	"dependencies": {
+		"moveable": "^0.44.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-scripts": "5.0.1",
+		"styled-components": "^5.3.8",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
